# bazel-jest

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  jest.bzl  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
project1/: BUILD.bazel  README.md  pnpm-lock.yaml
project1/test/: index.spec.js
project2/: BUILD.bazel  README.md
project2/src/: extra.js
project2/test/: index2.spec.js
src/: index.js
test/: index.spec.js  index2.spec.js
tools/: bazel_deps.bzl
